# sweepystats

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml  sphinx.yml
docs/: conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/api_reference/: index.rst.txt
docs/_sources/user_guide/: index.rst.txt
docs/_sources/user_guide/notebooks/: MVN.ipynb.txt  anova.ipynb.txt  k-anova.ipynb.txt  linalg.ipynb.txt  linreg.ipynb.txt  stepreg.ipynb.txt  sweepy.ipynb.txt
docs/api_reference/: index.html  index.rst
docs/source/: modules.html  modules.rst  sweepystats.html  sweepystats.rst
docs/user_guide/: index.html  index.rst
docs/user_guide/notebooks/: MVN.html  MVN.ipynb  anova.html  anova.ipynb  k-anova.html  k-anova.ipynb  linalg.html  linalg.ipynb  linreg.html  linreg.ipynb  stepreg.html  stepreg.ipynb  sweepy.html  sweepy.ipynb
sweepy/: __init__.py  linreg.py  sweepy.py
sweepystats/: __init__.py  anova.py  gaussian.py  linreg.py  sweep_matrix.py  util.py
tests/: test_anova.py  test_gaussian.py  test_linreg.py  test_matrix.py
