[project]
name = "sweepy"
version = "0.0.1"
authors = [
  { name="Benjamin Chu", email="benchu99@hotmail.com" },
]
description = "Python package to perform the statistical sweep operation on symmetric numpy matrices"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/biona001/sweepy"
Issues = "https://github.com/biona001/sweepy/issues"

[tool.setuptools]
py-modules = []
